# rag-vector-db-benchmark

./: .antigravityrules  .cursorrules  .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  DOCKER.md  Dockerfile  README.md  STRUCTURE.md  api.py  app_gui.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
experiments/configs/: baseline_ollama.yaml  docker_rag_api.yaml  qdrant_baseline.yaml
experiments/results/: 20260307_050136_baseline_ollama_squad.json  20260307_051139_baseline_ollama_squad.json  20260405_213028_baseline_ollama_squad.json  20260406_003736_baseline_ollama_squad.json  benchmark_db_20260406_010652.json  benchmark_db_20260406_010726.json  benchmark_db_20260406_010900.json
notebooks/: example_evaluation.ipynb
prompts/: .cursorrules  AGENTS.md  DOSYA_YERLEŞİMİ.md  PROMPTS.md  TEORİ.md
prompts/docs/: LEARNING_PATH.md
scripts/: benchmark_db.py  compare_retrievers.py  fix_summaries.py  run_experiment.py
src/: __init__.py
src/chunkers/: __init__.py  config.py  fixed_size_chunker.py
src/core/: __init__.py  chunking.py  embedding.py  evaluation.py  generation.py  ingestion.py  retrieval.py  types.py
src/datasets/: __init__.py  config.py  squad_loader.py
src/embedders/: __init__.py  config.py  sentence_transformers_embedder.py
src/evaluators/: __init__.py  config.py  generation_evaluator.py  judge_prompts.py  metrics.py  retrieval_evaluator.py
src/generators/: __init__.py  config.py  registry.py  universal_generator.py
src/pipeline/: __init__.py  config.py  rag_pipeline.py  result.py
src/retrievers/: __init__.py  chroma_retriever.py  config.py  factory.py  pinecone_retriever.py  qdrant_retriever.py  registry.py
src/utils/: config_loader.py
tests/: README.md  __init__.py  conftest.py
tests/chunkers/: test_fixed_size_chunker.py
tests/datasets/: test_squad_loader.py
tests/embedders/: test_sentence_transformers_embedder.py
tests/evaluators/: test_generation_evaluator.py  test_metrics.py
tests/generators/: test_universal_generator.py
tests/pipeline/: test_rag_pipeline.py
tests/retrievers/: __init__.py  test_config.py  (+3 more)
(+4 files in other folders)
